// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField should render correctly 1`] = `
.emotion-6 {
  display: block;
}

.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-right: 3rem;
}

.emotion-3 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #3A3A47;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-2:focus {
  box-shadow: none;
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-56 {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  z-index: 1200;
  padding: 0rem;
  visibility: hidden;
  opacity: 0;
}

.emotion-55 {
  background: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  border-radius: 2px;
  padding: 0.5rem .25rem .25rem .25rem;
  outline: none;
}

.emotion-54 {
  width: 288px;
}

.emotion-17 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-bottom: 0.5rem;
  font-weight: bold;
}

.emotion-11 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-8 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-8:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-8:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-8:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-53 {
  border-collapse: collapse;
  text-align: center;
  line-height: 1.5rem;
  width: 100%;
}

.emotion-53 th {
  width: 2rem;
  padding: 0.25rem 0;
}

.emotion-19 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
}

.emotion-19:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-18 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  color: #AAAAB9;
}

.emotion-18:hover {
  cursor: pointer;
  background: #F0F0F5;
}

<div>
  <div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-6"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-4"
          >
            <input
              autocomplete="off"
              class="emotion-0"
              placeholder="mm/dd/yyyy"
              type="text"
              value=""
            />
            <span
              class="emotion-3"
            >
              <button
                class="emotion-2"
                tabindex="-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="emotion-1"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <defs>
                      <path
                        d="M12 0c.619 0 .95.27.995.812l.005.13V2h1c1.273 0 1.938.607 1.996 1.822L16 4v14c0 1.273-.607 1.938-1.822 1.996L14 20H2C.727 20 .062 19.393.004 18.178L0 18V4.004c0-1.275.607-1.942 1.822-2L2 2h1V1c-.002-.667.33-1 1-1 .621 0 .954.287.998.862L5.004 1v1H11V.941C11 .314 11.333 0 12 0zm2 8H2v10h12V8zm-8.998 6H6c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L6 16H5c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L5.002 14H6zM11 14c.667 0 1 .333 1 1s-.333 1-1 1h-1c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1zm-5-4c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L6 12H5c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L5.002 10H6zm5 0c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L11 12h-1c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995l.138-.005H11zm3-6H2v2h12V4z"
                        id="calendar-outline_svg__a"
                      />
                    </defs>
                    <use
                      transform="translate(4 2)"
                      xlink:href="#calendar-outline_svg__a"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-56"
        data-visible="false"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="emotion-55"
          tabindex="-1"
        >
          <div
            class="emotion-54"
          >
            <div
              class="emotion-17"
            >
              <div
                class="emotion-11"
              >
                <button
                  class="emotion-8"
                  tabindex="-1"
                  title="Previous month"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-1"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M14.707 16.294a1 1 0 11-1.414 1.414l-5-5a1 1 0 010-1.414l5.001-5.001a1 1 0 011.414 1.414l-4.294 4.294 4.293 4.293z"
                      />
                    </svg>
                  </span>
                </button>
                Oct
                <button
                  class="emotion-8"
                  tabindex="-1"
                  title="Next month"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-1"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M8.294 7.707a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5.001a1 1 0 01-1.415-1.414L12.587 12 8.294 7.707z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="emotion-11"
              >
                <button
                  class="emotion-8"
                  tabindex="-1"
                  title="Previous year"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-1"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M14.707 16.294a1 1 0 11-1.414 1.414l-5-5a1 1 0 010-1.414l5.001-5.001a1 1 0 011.414 1.414l-4.294 4.294 4.293 4.293z"
                      />
                    </svg>
                  </span>
                </button>
                2018
                <button
                  class="emotion-8"
                  tabindex="-1"
                  title="Next year"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-1"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M8.294 7.707a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5.001a1 1 0 01-1.415-1.414L12.587 12 8.294 7.707z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <table
              class="emotion-53"
            >
              <thead>
                <tr>
                  <th>
                    S
                  </th>
                  <th>
                    M
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    W
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    F
                  </th>
                  <th>
                    S
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    data-date="2018-09-30"
                  >
                    <span
                      class="emotion-18"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2018-10-01"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2018-10-02"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                  <td
                    data-date="2018-10-03"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      03
                    </span>
                  </td>
                  <td
                    data-date="2018-10-04"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      04
                    </span>
                  </td>
                  <td
                    data-date="2018-10-05"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      05
                    </span>
                  </td>
                  <td
                    data-date="2018-10-06"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      06
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-07"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      07
                    </span>
                  </td>
                  <td
                    data-date="2018-10-08"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      08
                    </span>
                  </td>
                  <td
                    data-date="2018-10-09"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      09
                    </span>
                  </td>
                  <td
                    data-date="2018-10-10"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      10
                    </span>
                  </td>
                  <td
                    data-date="2018-10-11"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      11
                    </span>
                  </td>
                  <td
                    data-date="2018-10-12"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      12
                    </span>
                  </td>
                  <td
                    data-date="2018-10-13"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      13
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-14"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      14
                    </span>
                  </td>
                  <td
                    data-date="2018-10-15"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      15
                    </span>
                  </td>
                  <td
                    data-date="2018-10-16"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      16
                    </span>
                  </td>
                  <td
                    data-date="2018-10-17"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      17
                    </span>
                  </td>
                  <td
                    data-date="2018-10-18"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      18
                    </span>
                  </td>
                  <td
                    data-date="2018-10-19"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      19
                    </span>
                  </td>
                  <td
                    data-date="2018-10-20"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      20
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-21"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      21
                    </span>
                  </td>
                  <td
                    data-date="2018-10-22"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      22
                    </span>
                  </td>
                  <td
                    data-date="2018-10-23"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      23
                    </span>
                  </td>
                  <td
                    data-date="2018-10-24"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      24
                    </span>
                  </td>
                  <td
                    data-date="2018-10-25"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      25
                    </span>
                  </td>
                  <td
                    data-date="2018-10-26"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      26
                    </span>
                  </td>
                  <td
                    data-date="2018-10-27"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      27
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-28"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      28
                    </span>
                  </td>
                  <td
                    data-date="2018-10-29"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      29
                    </span>
                  </td>
                  <td
                    data-date="2018-10-30"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2018-10-31"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      31
                    </span>
                  </td>
                  <td
                    data-date="2018-11-01"
                  >
                    <span
                      class="emotion-18"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2018-11-02"
                  >
                    <span
                      class="emotion-18"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                  <td
                    data-date="2018-11-03"
                  >
                    <span
                      class="emotion-18"
                      role="button"
                    >
                      03
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateField should render correctly when disabled 1`] = `
.emotion-6 {
  display: block;
}

.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-right: 3rem;
}

.emotion-3 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #3A3A47;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-56 {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  z-index: 1200;
  padding: 0rem;
  visibility: hidden;
  opacity: 0;
}

.emotion-55 {
  background: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  border-radius: 2px;
  padding: 0.5rem .25rem .25rem .25rem;
  outline: none;
}

.emotion-54 {
  width: 288px;
}

.emotion-17 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-bottom: 0.5rem;
  font-weight: bold;
}

.emotion-11 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-8 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-8:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-8:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-8:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-53 {
  border-collapse: collapse;
  text-align: center;
  line-height: 1.5rem;
  width: 100%;
}

.emotion-53 th {
  width: 2rem;
  padding: 0.25rem 0;
}

.emotion-19 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
}

.emotion-19:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-18 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  color: #AAAAB9;
}

.emotion-18:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  cursor: not-allowed;
  opacity: 0.5;
  border-radius: inherit;
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-2:focus {
  box-shadow: none;
}

<div>
  <div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-6"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-4"
          >
            <input
              autocomplete="off"
              class="emotion-0"
              disabled=""
              placeholder="mm/dd/yyyy"
              type="text"
              value=""
            />
            <span
              class="emotion-3"
            >
              <button
                class="emotion-2"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="emotion-1"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <defs>
                      <path
                        d="M12 0c.619 0 .95.27.995.812l.005.13V2h1c1.273 0 1.938.607 1.996 1.822L16 4v14c0 1.273-.607 1.938-1.822 1.996L14 20H2C.727 20 .062 19.393.004 18.178L0 18V4.004c0-1.275.607-1.942 1.822-2L2 2h1V1c-.002-.667.33-1 1-1 .621 0 .954.287.998.862L5.004 1v1H11V.941C11 .314 11.333 0 12 0zm2 8H2v10h12V8zm-8.998 6H6c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L6 16H5c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L5.002 14H6zM11 14c.667 0 1 .333 1 1s-.333 1-1 1h-1c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1zm-5-4c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L6 12H5c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L5.002 10H6zm5 0c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L11 12h-1c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995l.138-.005H11zm3-6H2v2h12V4z"
                        id="calendar-outline_svg__a"
                      />
                    </defs>
                    <use
                      transform="translate(4 2)"
                      xlink:href="#calendar-outline_svg__a"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-56"
        data-visible="false"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="emotion-55"
          tabindex="-1"
        >
          <div
            class="emotion-54"
          >
            <div
              class="emotion-17"
            >
              <div
                class="emotion-11"
              >
                <button
                  class="emotion-8"
                  tabindex="-1"
                  title="Previous month"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-1"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M14.707 16.294a1 1 0 11-1.414 1.414l-5-5a1 1 0 010-1.414l5.001-5.001a1 1 0 011.414 1.414l-4.294 4.294 4.293 4.293z"
                      />
                    </svg>
                  </span>
                </button>
                Oct
                <button
                  class="emotion-8"
                  tabindex="-1"
                  title="Next month"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-1"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M8.294 7.707a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5.001a1 1 0 01-1.415-1.414L12.587 12 8.294 7.707z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="emotion-11"
              >
                <button
                  class="emotion-8"
                  tabindex="-1"
                  title="Previous year"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-1"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M14.707 16.294a1 1 0 11-1.414 1.414l-5-5a1 1 0 010-1.414l5.001-5.001a1 1 0 011.414 1.414l-4.294 4.294 4.293 4.293z"
                      />
                    </svg>
                  </span>
                </button>
                2018
                <button
                  class="emotion-8"
                  tabindex="-1"
                  title="Next year"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-1"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M8.294 7.707a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5.001a1 1 0 01-1.415-1.414L12.587 12 8.294 7.707z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <table
              class="emotion-53"
            >
              <thead>
                <tr>
                  <th>
                    S
                  </th>
                  <th>
                    M
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    W
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    F
                  </th>
                  <th>
                    S
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    data-date="2018-09-30"
                  >
                    <span
                      class="emotion-18"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2018-10-01"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2018-10-02"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                  <td
                    data-date="2018-10-03"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      03
                    </span>
                  </td>
                  <td
                    data-date="2018-10-04"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      04
                    </span>
                  </td>
                  <td
                    data-date="2018-10-05"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      05
                    </span>
                  </td>
                  <td
                    data-date="2018-10-06"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      06
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-07"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      07
                    </span>
                  </td>
                  <td
                    data-date="2018-10-08"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      08
                    </span>
                  </td>
                  <td
                    data-date="2018-10-09"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      09
                    </span>
                  </td>
                  <td
                    data-date="2018-10-10"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      10
                    </span>
                  </td>
                  <td
                    data-date="2018-10-11"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      11
                    </span>
                  </td>
                  <td
                    data-date="2018-10-12"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      12
                    </span>
                  </td>
                  <td
                    data-date="2018-10-13"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      13
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-14"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      14
                    </span>
                  </td>
                  <td
                    data-date="2018-10-15"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      15
                    </span>
                  </td>
                  <td
                    data-date="2018-10-16"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      16
                    </span>
                  </td>
                  <td
                    data-date="2018-10-17"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      17
                    </span>
                  </td>
                  <td
                    data-date="2018-10-18"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      18
                    </span>
                  </td>
                  <td
                    data-date="2018-10-19"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      19
                    </span>
                  </td>
                  <td
                    data-date="2018-10-20"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      20
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-21"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      21
                    </span>
                  </td>
                  <td
                    data-date="2018-10-22"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      22
                    </span>
                  </td>
                  <td
                    data-date="2018-10-23"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      23
                    </span>
                  </td>
                  <td
                    data-date="2018-10-24"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      24
                    </span>
                  </td>
                  <td
                    data-date="2018-10-25"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      25
                    </span>
                  </td>
                  <td
                    data-date="2018-10-26"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      26
                    </span>
                  </td>
                  <td
                    data-date="2018-10-27"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      27
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-28"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      28
                    </span>
                  </td>
                  <td
                    data-date="2018-10-29"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      29
                    </span>
                  </td>
                  <td
                    data-date="2018-10-30"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2018-10-31"
                  >
                    <span
                      class="emotion-19"
                      role="button"
                    >
                      31
                    </span>
                  </td>
                  <td
                    data-date="2018-11-01"
                  >
                    <span
                      class="emotion-18"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2018-11-02"
                  >
                    <span
                      class="emotion-18"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                  <td
                    data-date="2018-11-03"
                  >
                    <span
                      class="emotion-18"
                      role="button"
                    >
                      03
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
